# TcpAuth

client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: CMakeLists.txt  IDbHandler.h  main.cpp  postgresdb.cpp  postgresdb.h  server.cpp  server.h  structs.h
